# flowscope

./: .gitignore  CHANGELOG-ARCHIVE.md  CHANGELOG.md  Makefile  README.md  flowscope.spec  indicators.md  panels.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
.opencode/skills/changelog/: SKILL.md
.opencode/skills/openspec-archive-change/: SKILL.md
.opencode/skills/openspec-changelog/: SKILL.md
.opencode/skills/release-push/: SKILL.md  release-push.sh
.opencode/skills/release-version/: SKILL.md
openspec/changes/copiar-dados-csv/: design.md  proposal.md  tasks.md
openspec/changes/core-implementation/: design.md  proposal.md  tasks.md
openspec/changes/cross-platform-logging/: design.md  proposal.md  tasks.md
openspec/changes/diagnosis-panel/: design.md  proposal.md  tasks.md
openspec/changes/dominancia-pregao-stem-mfv/: design.md  proposal.md  tasks.md
openspec/changes/eficiencia-do-movimento/: design.md  (+2 more)
src/flowscope/: __main__.py
tests/: conftest.py
tests/test_application/: test_load_portfolio.py  test_logging_port.py  test_operation_guard.py  test_use_cases.py
tests/test_domain/: test_dominance_strategies.py  test_indicators.py  test_money_flow_classifier.py  test_value_objects.py  test_vwap_distance.py
tests/test_infrastructure/: test_b3_calendar.py  test_b3_client.py  test_b3_parser.py  test_b3_repository.py  test_cache.py  test_python_log_adapter.py  test_sampling_calendar.py
tests/test_presentation/: test_button_state.py  test_cli.py  test_controller.py  test_main.py  test_presenter.py  test_progress.py
(+304 files in other folders)
